--- a/src/app/modules/core/home/home.component.html
+++ b/src/app/modules/core/home/home.component.html
@@ -72,7 +72,7 @@
                                     *ngIf="!joinSesion">
                                     Crear Juego
                                 </button>
-                                <button class="btn btn-primary btn-lg" type="button" (click)="joinGame()"
+                                <button class="button drive dark" type="button" (click)="joinGame()"
                                     *ngIf="joinSesion">
                                     Unirse al Juego
                                 </button>
