--- a/src/app/modules/core/cards/cards.component.html
+++ b/src/app/modules/core/cards/cards.component.html
@@ -1,38 +1,40 @@
 <app-header></app-header>
-<div class="container" style="width: 100%;">
-  <h2 style="text-align: center;">{{title}}</h2>
-  <!--<div id="imagen">
-    <div id="info">
-      <p id="headline">Título</p>
-      <p id="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptates.</p>
-    </div>
-  </div>-->
-  <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-bottom: 2%;">
-   
+<div class="content align-items-center">
+  <div class="d-grid gap-2 d-md-flex justify-content-md-center" >
+    <h2 class="title">{{title}}</h2>
+  </div>
+  <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+    <hr class="title-separator">
+  </div>
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-bottom: 2%; margin-right: 4vw;">
     <button class="button drive dark" type="button" (click)="changeView()">
       {{buttonText}}
     </button>
   </div>
-  <div class="row row-cols-1 row-cols-md-6 g-4" *ngIf="createCards" >
-    <div class="col marvel-card" *ngFor="let card of cardsToCreate">
-      <div class="card h-100" (click)="openPopup(card,1)">
-        <img src="./../../../../assets/img/marvel-cards/{{card}}.jpg" class="card-img-top" alt="...">
+
+  <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+    <!--Cartas para crear-->
+    <div class="row row-cols-1 row-cols-md-6 g-4" *ngIf="createCards" style="width: 80%;">
+      <div class="col marvel-card" *ngFor="let card of cardsToCreate">
+        <div class="card h-100" (click)="openPopup(card,1)">
+          <img src="./../../../../assets/img/marvel-cards/{{card}}.jpg" class="card-img-top" alt="...">
+        </div>
       </div>
     </div>
-  </div>
-
-  <div class="row row-cols-md-6 g-4" *ngIf="!createCards">
-    <div class="col marvel-card" *ngFor="let card of cards">
-      <div class="card h-100" (click)="openPopup(card,2)">
-        <img src="./../../../../assets/img/marvel-cards/{{card.image}}.jpg" class="card-img-top" alt="...">
-        <div class="card-footer h-100">
-          <small class="text-muted">Poder: {{ card.power }}</small> <br>
-          <small class="text-muted">Descripcion: {{ card.description }}</small>
+    <!--Cartas Creadas-->
+    <div class="row row-cols-md-6 g-4 " *ngIf="!createCards" style="width: 80%;">
+      <div class="col marvel-card" *ngFor="let card of cards">
+        <div class="card h-100" (click)="openPopup(card,2)">
+          <img src="./../../../../assets/img/marvel-cards/{{card.image}}.jpg" class="card-img-top" alt="...">
+          <div class="card-footer h-100">
+            <small class="card-text">Poder: {{ card.power }}</small> <br>
+            <small class="card-text">Descripcion: {{ card.description }}</small>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
+  
   <app-create-card [title]="modalTitle" [displayStyle]="displayStyle" [image]="imageUrlComplete" [info]="info"
-    (modalStatus)="closePopup($event)"></app-create-card>
+  (modalStatus)="closePopup($event)"></app-create-card>
 </div>
