--- a/src/app/modules/core/cards/cards.component.sass
+++ b/src/app/modules/core/cards/cards.component.sass
@@ -1,7 +1,32 @@
-.container
-    //border:1px solid black
-    padding-top: 4vh
-        
+.content
+    width: 100%
+    height: 100%
+    z-index: -1
+    top: 0
+    background-image: url(/assets/img/game-background.jpg)
+    //background-color: #2f3545
+    background-size: cover
+    //background-repeat: no-repeat
+
+.title
+    color: white
+    -webkit-text-stroke: 1px black
+    font-size: 60px
+    font-weight: 600
+
+.title-separator
+    width: 60%
+    height: 8px
+    border: 2px solid #22b9f2
+    border-radius: 5px
+    background-color: #2f3545
+
+.card
+    background-color: #2f3545
+    border: 2px solid #22b9f2
+
+.card-text
+    color: #22b9f2
 
 .marvel-card:hover
     transform: scale(1.05)
@@ -16,52 +41,7 @@
 
 .btn
     margin-right:20px
-
-#imagen 
-    width: 300px
-    height: 200px
-    background-size: cover/*sólo para ejemplo*/
-    background-image: url(/assets/img/game-background.jpg)
-    margin: 30px auto
-
-
-#info 
-    position:absolute
-    overflow:hidden
-    width: 300px
-    height: 200px
-    background-color: rgba(31, 31, 31, 0.9)
-    opacity:0
-    transition: opacity 0.3s
-
-
-#imagen:hover div#info 
-    opacity:1
-
-
-#headline 
-    color:white
-    position: absolute
-    font-size: 1.5rem
-    margin-left: -75px
-    margin-top: 25px
-    transition: margin-left 0.3s
-
-
-#imagen:hover #headline 
-    margin-left: 115px
-
-
-#descripcion 
-    font-size: 1rem
-    text-align: center
-    margin-top: 200px
-    transition: margin-top 0.4s
-
-
-#imagen:hover p#descripcion 
-    margin-top: 75px
-
+        
 .button     
     &.dark 
         --background: #2F3545
