--- a/src/app/modules/core/create-card/create-card.component.html
+++ b/src/app/modules/core/create-card/create-card.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog" role="document">
         <form id="create-game-card" [formGroup]="cardForm" (ngSubmit)="createCard()">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header justify-content-md-center">
                     <h5 class="modal-title" id="staticBackdropLabel">{{ title }}</h5>
                 </div>
                 <div class="modal-body row row-cols-1 row-cols-md-2 g-4">
@@ -12,12 +12,17 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card  h-100">
                             <div class="card-body">
                                 <div class="mb-3">
                                     <label for="power" class="form-label">Poder</label>
-                                    <input type="text" class="form-control" id="power" placeholder="{{poder}}" name="power"
-                                        formControlName="poder" required>
+                                    <div class="input-group pd-20">
+                                        <div class="input-group-text input-icon">
+                                            <em class="fas fa-solid fa-user-ninja"></em>
+                                        </div>
+                                        <input type="text" class="form-control" id="power" placeholder="{{poder}}" name="power"
+                                            formControlName="poder" required>
+                                    </div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="description" class="form-label">Descripcion de la carta</label>
@@ -29,7 +34,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" (click)="closePopup()">Close</button>
+                    <button type="button" class="btn btn-danger" (click)="closePopup()">Cerrar</button>
                     <button type="submit" *ngIf="info == null" class="btn btn-primary">Guardar</button>
                     <button type="button" *ngIf="info != null" class="btn btn-primary" (click)="updateCard()">Actualizar</button>
                 </div>
